--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,1 +1,43 @@
-test
+name: Run Newman Tests
+
+on:
+  schedule:
+    - cron: '0 8 * * *'  # 매일 오후 5시 (KST 기준, UTC 8시)
+
+#  push:
+  pull_request:
+    branches:
+      - main # 'main' 브랜치로 PR이 열리거나 병합 시도될 때만 실행
+  workflow_dispatch:  # UI에서 수동 실행 가능
+
+jobs:
+  run_newman:
+    runs-on: ubuntu-latest
+
+    steps:
+      # 1. Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # 2. Install Node.js to use npm
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '22'  # 또는 필요한 Node.js 버전
+
+      # 3. Install Newman and Slack Reporter
+      - name: Install Newman and Slack Reporter
+        run: |
+          npm install -g newman newman-reporter-slackmsg
+
+      # 4. Run Postman Collection
+      - name: Run Postman Collection
+        run: |
+          TIMESTAMP=$(date +"%Y-%m-%d_%H-%M-%S")
+          echo "TIMESTAMP=$TIMESTAMP" >> $GITHUB_ENV
+          newman run ./login.postman_collection.json \
+            --suppress-exit-code \
+            -r cli,slackmsg \
+            --reporter-slackmsg-webhookurl 'https://slack.com/api/chat.postMessage' \
+            --reporter-slackmsg-token ${{ secrets.SLACK_BOT_TOKEN }} \
+            --reporter-slackmsg-channel '#noti_qa_auto_github'
