--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,3 +19,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+        # 2. Install Node.js to use npm
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '22'  # 또는 필요한 Node.js 버전
+
