--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
-name: Run Newman Tests
+name: Rim Tests  # 워크플로우 이름
 
-on:
+on:     # 워크플로우가 언제 실행될지 설정하는 부분으로, 필수항목
   schedule:
     - cron: '0 8 * * *'  # 매일 오후 5시 (KST 기준, UTC 8시)
 
