--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,4 +40,4 @@ jobs:
             -r cli,slackmsg \
             --reporter-slackmsg-webhookurl 'https://slack.com/api/chat.postMessage' \
             --reporter-slackmsg-token ${{ secrets.SLACK_BOT_TOKEN }} \
-            --reporter-slackmsg-channel '#noti_qa_auto_github'
+            --reporter-slackmsg-channel '#rim_api_noti'
