--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,6 @@ jobs:
           newman run ./Login.json \
             --suppress-exit-code \
             -r cli,slackmsg \
-            --reporter-slackmsg-webhookurl 'https://slack.com/api/chat.postMessage' \
+            --reporter-slackmsg-webhookurl ${{ secrets.SLACK_WEBHOOK_URL }} \
             --reporter-slackmsg-token ${{ secrets.SLACK_BOT_TOKEN }} \
             --reporter-slackmsg-channel '#rim_api_noti'
