--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '22'  # 튻정 Node.js 버전을 사용하도록 설정
+          node-version: '22'  # 특정 Node.js 버전을 사용하도록 설정
           
       # 3. Install Newman and Slack Reporter
       - name: Install Newman and Slack Reporter
@@ -33,8 +33,6 @@ jobs:
      # 4. Run Postman Collection
       - name: Run Postman Collection
         run: |
-          TIMESTAMP=$(date +"%Y-%m-%d_%H-%M-%S")
-          echo "TIMESTAMP=$TIMESTAMP" >> $GITHUB_ENV
           newman run ./Login.json \
             --suppress-exit-code \
             -r cli,slackmsg \
