--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,8 +34,22 @@ jobs:
       - name: Run Postman Collection
         run: |
           newman run ./Login.json \
-            --suppress-exit-code \
+            --suppress-exit-code \  # 테스트가 실패해도 수행되도록 하는 설정값 
             -r cli,slackmsg \
             --reporter-slackmsg-token ${{ secrets.SLACK_BOT_TOKEN }} \
             --reporter-slackmsg-webhookurl ${{ secrets.SLACK_WEBHOOK_URL }} \
             --reporter-slackmsg-channel '#rim_api_noti'
+            
+    # 5. Send Slack Notification
+      - name: Send Slack Notification
+      if : always()
+      run: |
+        if grep '"error"' ./newman.json; then
+            curl -X POST -H 'Content-type: application/json' \
+            --data '{"text": "❌ Newman 테스트 실패: 자세한 내용은 로그를 확인하세요."}' \
+            ${{ secrets.SLACK_WEBHOOK_URL }}
+          else
+            curl -X POST -H 'Content-type: application/json' \
+            --data '{"text": "✅ Newman 테스트 성공!"}' \
+            ${{ secrets.SLACK_WEBHOOK_URL }}
+          fi
