--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,10 +37,12 @@ jobs:
             -r cli,slackmsg \
             --reporter-slackmsg-token ${{ secrets.SLACK_BOT_TOKEN }} \
             --reporter-slackmsg-webhookurl ${{ secrets.SLACK_WEBHOOK_URL }} \
-            --reporter-slackmsg-channel '#rim_api_noti'
+            --reporter-slackmsg-channel '#rim_api_noti' \
+            || true 
             
     # 5. Send Slack Notification
       - name: Send Slack Notification
+        if : always()
         run: |
           if grep '"error"' ./newman.json; then
             curl -X POST -H 'Content-type: application/json' \
