--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,12 @@ jobs:
         run: |
           newman run ./Login.json \
             --suppress-exit-code \  # 테스트가 실패해도 수행되도록 하는 설정값 
+          if grep '"error"' ./newman.json; then
+            --reporter-slackmsg-token ${{ secrets.SLACK_BOT_TOKEN }} \
+            --reporter-slackmsg-webhookurl ${{ secrets.SLACK_WEBHOOK_URL }} \
+            --reporter-slackmsg-channel '#rim_api_noti' \
+            --data '{"text": "❌ Newman 테스트 실패: 자세한 내용은 로그를 확인하세요."}' \
+            ${{ secrets.SLACK_WEBHOOK_URL }}
             -r cli,slackmsg \
             --reporter-slackmsg-token ${{ secrets.SLACK_BOT_TOKEN }} \
             --reporter-slackmsg-webhookurl ${{ secrets.SLACK_WEBHOOK_URL }} \
