--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
             --reporter-slackmsg-channel '#rim_api_noti' \
             || true 
             
-          if grep '"error"' ./newman.json; then
+          if grep '"error"' ./Login.json; then
             curl -X POST -H 'Content-type: application/json' \
             --data '{"text": "❌ Newman 테스트 실패: 자세한 내용은 로그를 확인하세요."}' \
             ${{ secrets.SLACK_WEBHOOK_URL }}
