--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,9 +42,12 @@ jobs:
             || true 
             
           if grep '"error"' ./Login.json; then
-            curl -X POST -H 'Content-type: application/json' \
-            --data '{"text": "❌ Newman 테스트 실패: 자세한 내용은 로그를 확인하세요."}' \
-            ${{ secrets.SLACK_WEBHOOK_URL }}
+            newman run ./Login.json \
+              -r slackmsg \
+              --reporter-slackmsg-token ${{ secrets.SLACK_BOT_TOKEN }} \
+              --reporter-slackmsg-webhookurl ${{ secrets.SLACK_WEBHOOK_URL }} \
+              --reporter-slackmsg-channel '#rim_api_noti' \
+              --data '{"text": "❌ Newman 테스트 실패: 자세한 내용은 로그를 확인하세요."}
           else
             curl -X POST -H 'Content-type: application/json' \
             --data '{"text": "✅ Newman 테스트 성공!"}' \
