--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,24 +33,23 @@ jobs:
       - name: Run Postman Collection
         run: |
           newman run ./Login.json \
-            --suppress-exit-code   # 테스트가 실패해도 수행되도록 하는 설정값 
+            --suppress-exit-code  \ # 테스트가 실패해도 수행되도록 하는 설정값 
+             --reporter-json-export Login-report.json
             # -r cli,slackmsg \
             # --reporter-slackmsg-token ${{ secrets.SLACK_BOT_TOKEN }} \
             # --reporter-slackmsg-webhookurl ${{ secrets.SLACK_WEBHOOK_URL }} \
             # --reporter-slackmsg-channel '#rim_api_noti' \
             #|| true 
-            
-          if grep '"error"' ./Login.json; then
-            newman run ./Login.json \
-              -r cli,slackmsg \
-              --suppress-exit-code \
+
+      - name : Check Newman Report for Errors and Notify Slack
+        run : 
+          if grep -i '"error"' Login-report.json; then
+              -r slackmsg \
               --reporter-slackmsg-token ${{ secrets.SLACK_BOT_TOKEN }} \
               --reporter-slackmsg-webhookurl ${{ secrets.SLACK_WEBHOOK_URL }} \
               --reporter-slackmsg-channel '#rim_api_noti' \
-              --data '{"text": "❌ Newman 테스트 실패: 자세한 내용은 로그를 확인하세요."}
+              --data '{"text": "❌ Newman 테스트 실패: 자세한 내용은 로그를 확인하세요."}'
           else
-            curl -X POST -H 'Content-type: application/json' \
-            --data '{"text": "✅ Newman 테스트 성공!"}' \
-            ${{ secrets.SLACK_WEBHOOK_URL }}
+            echo "Test passed, no error found."
           fi
             
