--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           newman run ./Login.json \
             --suppress-exit-code  \ # 테스트가 실패해도 수행되도록 하는 설정값 
-             --reporter-json-export Login-report.json
+            --reporter-json-export Login-report.json
             # -r cli,slackmsg \
             # --reporter-slackmsg-token ${{ secrets.SLACK_BOT_TOKEN }} \
             # --reporter-slackmsg-webhookurl ${{ secrets.SLACK_WEBHOOK_URL }} \
@@ -42,7 +42,7 @@ jobs:
             #|| true 
 
       - name : Check Newman Report for Errors and Notify Slack
-        run : 
+        run : |
           if grep -i '"error"' Login-report.json; then
               -r slackmsg \
               --reporter-slackmsg-token ${{ secrets.SLACK_BOT_TOKEN }} \
