--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,18 +28,13 @@ jobs:
       - name: Install Newman and Slack Reporter
         run: |
           npm install -g newman newman-reporter-slackmsg
-          
-     # 4. Run Postman Collection
-      - name: Run Postman Collection
+
+      - name: Run Newman Collection and Export JSON Report
         run: |
           newman run ./Login.json \
-            --suppress-exit-code  \ # 테스트가 실패해도 수행되도록 하는 설정값 
-            --reporter-json-export Login.json
-            # -r cli,slackmsg \
-            # --reporter-slackmsg-token ${{ secrets.SLACK_BOT_TOKEN }} \
-            # --reporter-slackmsg-webhookurl ${{ secrets.SLACK_WEBHOOK_URL }} \
-            # --reporter-slackmsg-channel '#rim_api_noti' \
-            #|| true 
+            - r json \
+            --reporter-json-export Login-report.json
+          
 
       - name : Check Newman Report for Errors and Notify Slack
         run : |
