--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,9 +32,12 @@ jobs:
       - name: Run Newman Collection and Export JSON Report
         run: |
           newman run ./Login.json \
-            - r json \
-            --reporter-json-export Login-report.json
-          
+            -r json,slackmsg \
+            --reporter-json-export Login-report.json \
+            --reporter-slackmsg-token ${{ secrets.SLACK_BOT_TOKEN }} \
+            --reporter-slackmsg-webhookurl ${{ secrets.SLACK_WEBHOOK_URL }} \
+            --reporter-slackmsg-channel '#rim_api_noti'
+            
 
       - name : Check Newman Report for Errors and Notify Slack
         run : |
