의존성 업데이트 및 설치

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,8 +28,53 @@ jobs:
       # 3. 의존성 설치 및 업데이트 
       - name : Install and update dependencies
         run : |
-          npm install \
+          npm install -g npm
+          npm install 
           npm update
+
+       
+GitHub Actions 워크플로우에서 위의 npm WARN deprecated 메시지를 해결하기 위해 자동으로 의존성을 업데이트하고 최신 버전으로 패키지를 설치하는 방법을 설정할 수 있습니다. 아래는 이를 구현하는 워크플로우 예제입니다:
+
+1. 워크플로우 설정 예제
+yaml
+코드 복사
+name: Update and Run Tests
+
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch: # UI에서 수동 실행 가능
+
+jobs:
+  update_dependencies:
+    runs-on: ubuntu-latest
+
+    steps:
+      # 1. 리포지토리 체크아웃
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # 2. Node.js 설정
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '22'  # 사용할 Node.js 버전
+
+      # 3. 의존성 업데이트 및 설치
+      - name: Update and Install Dependencies
+        run: |
+          # 오래된 패키지를 업데이트하고 의존성 설치
+          npm install -g npm # 최신 npm으로 업데이트
+          npm install
+          npm update
+
+      # 4. 워닝 확인 및 문제 해결 (선택 사항)
+      - name: Check Deprecated Warnings
+        run: |
+          if npm outdated; then
+            echo "Outdated dependencies detected."
+          fi   
           
       # 4. Install Newman and Slack Reporter
       - name: Install Newman and Slack Reporter
