--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,3 +40,10 @@ jobs:
             --reporter-slackmsg-token ${{ secrets.SLACK_BOT_TOKEN }} \
             --reporter-slackmsg-webhookurl ${{ secrets.SLACK_WEBHOOK_URL }} \
             --reporter-slackmsg-channel '#rim_api_noti'
+        continue-on-error : true
+
+
+      - name :  Check for Newman Failure and Notify Slack
+        if : failure()
+        run : |
+          echo "❌ Error occurred during Newman tests. Check the detailed logs for more information."
