--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,15 +63,16 @@ jobs:
               text: '❌ Error: Collection file Login.json not found. Please check the file path.'
             };
             const webhookUrl = process.env.SLACK_WEBHOOK_URL;
-            const fetch = require('node-fetch');
-            await fetch(webhookUrl, {
+            const response = await fetch(webhookUrl, {
               method: 'POST',
               headers: {
                 'Content-Type': 'application/json'
               },
               body: JSON.stringify(payload)
             });
-
+            if (!response.ok) {
+              throw new Error('Failed to send Slack notification');
+            }
       # 7. Check if Newman Run Failed and Notify Slack (Using GitHub Script)
       - name: Notify Slack if Newman Run Failed
         if: failure()  # Newman 실행이 실패한 경우에만 실행
@@ -82,11 +83,13 @@ jobs:
               text: '❌ Error occurred during Newman tests: Collection could not be loaded. Please check the collection path or content.'
             };
             const webhookUrl = process.env.SLACK_WEBHOOK_URL;
-            const fetch = require('node-fetch');
-            await fetch(webhookUrl, {
+            const response = await fetch(webhookUrl, {
               method: 'POST',
               headers: {
                 'Content-Type': 'application/json'
               },
               body: JSON.stringify(payload)
             });
+            if (!response.ok) {
+              throw new Error('Failed to send Slack notification');
+            }
