--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: '22'  # 특정 Node.js 버전을 사용하도록 설정
 
-      - name: env
+      - name: Use Environment
         env: 
           API_USERNAME: ${{secrets.API_USERNAME}}
           API_PWD : ${{secrets.API_PWD}}
