--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,6 @@
 name: Rim Test  # 워크플로우 이름
 
 on:     # 워크플로우가 언제 실행될지 설정하는 부분으로, 필수항목
-  # schedule:
-   # - cron: '0 8 * * *'  # 매일 오후 5시 (KST 기준, UTC 8시)
-
   push: # 특정 브랜치로 push될때마다 실행하도록 설정 
     branches:
       - main
@@ -61,8 +58,7 @@ jobs:
         run: |
           newman run ./Login.json \
             -r json,slackmsg \
-            --env-var "password = ${{ secrets.API_PWD }}" \
-            --env-var "userId = ${{ secrets.API_NAME }}" \
+            --environment ./env.json \
             --reporter-json-export newman-report.json \
             --reporter-slackmsg-token ${{ secrets.SLACK_BOT_TOKEN }} \
             --reporter-slackmsg-webhookurl ${{ secrets.SLACK_WEBHOOK_URL }} \
