--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,7 +58,7 @@ jobs:
         run: |
           newman run ./Login.json \
             -r json,slackmsg \
-            --environment .//home/runner/work/socar-rim/rim_api_test2/env.json  \
+            --environment /home/runner/work/socar-rim/rim_api_test2/env.json  \
             --reporter-json-export newman-report.json \
             --reporter-slackmsg-token ${{ secrets.SLACK_BOT_TOKEN }} \
             --reporter-slackmsg-webhookurl ${{ secrets.SLACK_WEBHOOK_URL }} \
