--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,6 +40,7 @@ jobs:
           }
           EOF
           echo "✅ Default env.json file created."
+          cat ./env.json
 
       # 4. Check if collection file exists
       - name: Check if Login.json exists
