--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Create Default Postman Environment
         run: |
-          cat <<EOF > env.json
+          cat <<EOF > ./env.json
           {
             "id": "b978a6ba-1a76-43a5-badf-084c14613d20",
             "name": "Generated Environment",
