--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,7 +58,8 @@ jobs:
         run: |
           newman run ./Login.json \
             -r json,slackmsg \
-            --environment ./env.json \
+            --env-var userID = ${{ secrets.API_NAME }} \
+            --env-var password = ${{ secrets.API_PWD }} \
             --reporter-json-export newman-report.json \
             --reporter-slackmsg-token ${{ secrets.SLACK_BOT_TOKEN }} \
             --reporter-slackmsg-webhookurl ${{ secrets.SLACK_WEBHOOK_URL }} \
