--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,9 +44,8 @@ jobs:
         run: |
           newman run ./Login.json \
             -r json,slackmsg \
-            --verbose \
             --env-var userID=${{ secrets.API_NAME }} \
-            --env-var password=${{ secrets.API_PWD }} \
+            --env-var password=${{ secrets.API_PW }} \
             --reporter-json-export newman-report.json \
             --reporter-slackmsg-token ${{ secrets.SLACK_BOT_TOKEN }} \
             --reporter-slackmsg-webhookurl ${{ secrets.SLACK_WEBHOOK_URL }} \
